--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <div class="zach_widget" data-color="orange"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!--
       This HTML file is a template.
